# Hitzeflaute

./: .gitignore  Makefile  README.md  format_repo.bat  pyproject.toml  run.bat  run.ps1  try_front_end.bat
.github/workflows/: python-app.yml
back_end/: SERVER_README.md  pyproject.toml  run_back_end.bat  start_server.py
back_end/src/: directories.py  onion_enforcer.py
back_end/src/app/: game_manager.py  game_ws_manager.py  lobby_manager.py  lobby_ws_manager.py  logging.py  prepare_gs.py  server.py  ws_manager.py
back_end/src/engine/: engine.py  finance.py  grid_expansion.py  market_coupling.py  new_game.py  referee.py
back_end/src/game_cache/: game_0.json  game_1.json  game_2.json  game_3.json  game_4.json  (+4 more)
back_end/tests/: base_test.py  test_onion_enforcer.py
front_end/: .env.local.example  .eslintrc.json  README.md  package-lock.json  package.json  run_front_end.bat  tailwind.config.js  tsconfig.json
scripts/: pre-commit
src/: directories.py  onion_enforcer.py
src/app/: backend.py  game_manager.py
src/engine/: __init__.py  engine.py  finance.py  market_coupling.py  new_game.py  referee.py
src/models/: assets.py  buses.py  colors.py  game_settings.py  game_state.py  geometry.py  ids.py  market_coupling_result.py  message.py  player.py  transmission.py
src/tools/: random_choice.py  serialization.py  typing.py
tests/test_engine/: test_engine.py  test_finance.py  test_market_coupling.py  test_new_game.py  test_referee.py
tests/test_models/: test_assets.py  test_game_state.py
tests/utils/: comparisons.py  game_state_maker.py  repo_maker.py
(+174 files in other folders)
