[project]
name = "power-flow-game"
version = "0.0.0"
description = "A game based on electricity market coupling"
authors = ["Robbie Muir <robbiemuir7@gmail.com>", "Roman Cantu <>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypsa>=0.34.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "plotly>=6.1.2",
    "livereload==2.7.1",
    "randcraft>=0.1.10",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "pytest>=8.3.5"
]

[tool.ruff]
extend-include = ['*.ipynb']
line-length = 200

